--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,14 +4,14 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: 薛維平律師事務所 # Website name
-baseURL: 'https://example.com/' # Website URL
+baseURL: 'https://mt019.github.io/SWP/' # Website URL
 
 ############################
 ## LANGUAGE
 ############################
 
 defaultContentLanguage: en
-hasCJKLanguage: false
+hasCJKLanguage: true
 defaultContentLanguageInSubdir: false
 removePathAccents: true
 
